generated/checkers/refine/KN-Null-Pointer-Dereference-1f886a7b-4/build_logs/syntax-repair-refine-1-4/build_stderr_3.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::isProvenNonNull(clang::ento::SymbolRef, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:125:24: error: no matching function for call to ‘clang::ento::DefinedOrUnknownSVal::DefinedOrUnknownSVal()’
  125 |   DefinedOrUnknownSVal IsNull;
      |                        ^~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ConstraintManager.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/SVals.h:209:12: note: candidate: ‘clang::ento::DefinedOrUnknownSVal::DefinedOrUnknownSVal(clang::ento::SVal::SValKind, const void*)’
  209 |   explicit DefinedOrUnknownSVal(SValKind Kind, const void *Data = nullptr)
      |            ^~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/SVals.h:209:12: note:   candidate expects 2 arguments, 0 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/SVals.h:199:7: note: candidate: ‘constexpr clang::ento::DefinedOrUnknownSVal::DefinedOrUnknownSVal(const clang::ento::DefinedOrUnknownSVal&)’
  199 | class DefinedOrUnknownSVal : public SVal {
      |       ^~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/SVals.h:199:7: note:   candidate expects 1 argument, 0 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/SVals.h:199:7: note: candidate: ‘constexpr clang::ento::DefinedOrUnknownSVal::DefinedOrUnknownSVal(clang::ento::DefinedOrUnknownSVal&&)’
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/SVals.h:199:7: note:   candidate expects 1 argument, 0 provided
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
